# dossier

./: .env.example  .gitignore  DOSSIER_EXECUTION_ROADMAP_NO_TIMELINE.md  DOSSIER_FINAL_UNIFIED_ALGORITHM_PLAN.md  DOSSIER_PRODUCT_PLAN.md  README.md  START_HERE_KICKOFF_PLAN.md  pyproject.toml
archive_old_unwanted/: AI_Agent_Algorithms_Research_Report.docx  DOSSIER_CORE_INSIGHT_ALGORITHM.md  DOSSIER_DEEP_ONLINE_ALGORITHM_STACK.md  DOSSIER_EXECUTION_ROADMAP_NO_TIMELINE_backup_20260311_170940.md  DOSSIER_EXECUTION_ROADMAP_NO_TIMELINE_backup_20260311_174930.md  DOSSIER_FINAL_UNIFIED_ALGORITHM_PLAN_backup_20260311_170720.md  DOSSIER_FINAL_UNIFIED_ALGORITHM_PLAN_backup_20260311_174251.md  DOSSIER_FINAL_UNIFIED_ALGORITHM_PLAN_backup_20260311_174446.md  DOSSIER_PRODUCT_PLAN_backup_20260311_170940.md  deep-research-report.md  deep-research-report_backup_20260311_174251.md  qwen.txt
benchmarks/: prompts.txt
contracts/: README.md  contradiction.schema.json  counterfactual_test.schema.json  hypothesis.schema.json  mechanism.schema.json  novelty_score.schema.json  prediction.schema.json  proof_tree.schema.json  source_origin_cluster.schema.json
scripts/: export_contract_schemas.py
src/dossier/: __init__.py  cli.py  (+20 more)
tests/: test_atomizer.py  test_cli.py  test_compression.py  test_config.py  test_contracts.py  test_counterfactual.py  test_db.py  test_fetching.py  test_graph.py  test_hypothesis.py  test_llm.py  test_llm_utils.py  test_mechanism.py  test_memory.py  test_output.py  test_planner.py  test_ranking.py  test_runtime.py  test_sanity.py  test_search.py  test_triggers.py
(+2 files in other folders)
